system/cloudflare-ddns/resources/namespace-pod-security-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-ddns
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
