system/cloudflare-ddns/resources/cloudflare-ddns-external.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudflare-ddns-external

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudflare-ddns-external
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudflare-ddns-external
    spec:
      containers:
        - name: cloudflare-ddns
          image: ghcr.io/rokoucha/cloudflare-ddns:20261008.053749
          imagePullPolicy: IfNotPresent
          args:
            - -e
            - -w
            - 5m
            - -n
            - materia
            - ggrel.net
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
