system/cloudflare-ddns/resources/cloudflare-ddns.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: cloudflare-ddns

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudflare-ddns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudflare-ddns
    spec:
      hostNetwork: true
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - name: cloudflare-ddns
          image: ghcr.io/rokoucha/cloudflare-ddns:20261008.104813
          imagePullPolicy: IfNotPresent
          args:
            - -w
            - 5m
            - -s
            - dns
            - -n
            - $(K8S_NODE_NAME)
            - ggrel.net
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
