system/cloudflare-ddns/resources/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-egress
  namespace: cloudflare-ddns
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: cloudflare-ddns-external
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toFQDNs:
        - matchName: api.cloudflare.com
        - matchName: v4.ident.me
        - matchName: v6.ident.me
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
